crates/buff-lang-codegen-rust/tests/snapshots/crypto_codegen__hash_codegen_md5_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/crypto_codegen.rs
expression: src
---
fn f() {
    hex::encode(md5::compute("hello".as_bytes()).0);
}
