crates/buff-lang-codegen-rust/tests/snapshots/crypto_codegen__hash_codegen_sha256_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/crypto_codegen.rs
expression: src
---
fn f() {
    {
        use sha2::Digest;
        hex::encode(sha2::Sha256::digest("hello".as_bytes()))
    };
}
