crates/buff-lang-codegen-rust/tests/snapshots/crypto_codegen__hash_codegen_sha512_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/crypto_codegen.rs
assertion_line: 685
expression: src
---
fn f() {
    {
        use sha2::Digest;
        hex::encode(sha2::Sha512::digest("hello".to_string().as_bytes()))
    };
}
